--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 asgiref==3.4.1
+attrs==21.4.0
 autopep8==1.5.7
 dj-database-url==0.5.0
 Django==4.0.1
 gunicorn==20.1.0
+iniconfig==1.1.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
 pycodestyle==2.7.0
+pyparsing==3.0.7
+pytest==7.0.1
+pytest-django==4.5.2
 python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
 toml==0.10.2
+tomli==2.0.1
 Unipath==1.1
 whitenoise==5.3.0
