--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 autopep8==1.5.7
 dj-database-url==0.5.0
 Django==4.0.1
+django-localflavor==3.1
 gunicorn==20.1.0
 iniconfig==1.1.1
 packaging==21.3
@@ -13,7 +14,9 @@ pyparsing==3.0.7
 pytest==7.0.1
 pytest-django==4.5.2
 python-decouple==3.4
+python-stdnum==1.17
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
 tomli==2.0.1
