--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 
 # database & logs
 *.db
-*.sqlite3
+.sqlite3
 *.log
 
 # venv
@@ -32,3 +32,5 @@ apps/static/assets/.temp
 docker-compose.yml
 Dockerfile
 nginx/appseed-app.conf
+.env
+
