--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 autopep8==1.5.7
 dj-database-url==0.5.0
 Django==4.0.1
+django-environ==0.8.1
 django-localflavor==3.1
 gunicorn==20.1.0
 iniconfig==1.1.1
