--- a/.gitignore
+++ b/.gitignore
@@ -8,20 +8,20 @@ __pycache__/
 
 # database & logs
 *.db
+db.*
 .sqlite3
 *.log
+db.sqlite3
 
-# venv
-env
-.env
 venv
+env/
+.env
+.venv
+venv/*
 
 # other
 .DS_Store
 
 # javascript
 package-lock.json
-.vscode/symbols.json
-
-.gitignore
-db.sqlite3
+.vscode/*
