--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+psycopg2
 asgiref==3.4.1
 attrs==21.4.0
 autopep8==1.5.7
@@ -22,4 +23,4 @@ sqlparse==0.4.1
 toml==0.10.2
 tomli==2.0.1
 Unipath==1.1
-whitenoise==5.3.0
+whitenoise==6
