--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = core.settings
+DJANGO_SETTINGS_MODULE = core.settings.base
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
